--- a/yoloV1.ipynb
+++ b/yoloV1.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "kyMFQJFQalqe"
       ],
-      "authorship_tag": "ABX9TyPUe7776kXg16uzhtYS8Vzh",
+      "authorship_tag": "ABX9TyPdbIpMiRQe3TCs1UnDYePp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "NaCdYsq6516c"
       },
-      "execution_count": 1,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "VgtKuSQd5223"
       },
-      "execution_count": 2,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
       "metadata": {
         "id": "xPHvbafO7JT_"
       },
-      "execution_count": 3,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -105,7 +105,7 @@
       "metadata": {
         "id": "FZP1rka-8Fip"
       },
-      "execution_count": 4,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "--o5afTWalU1"
       },
-      "execution_count": 5,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -163,7 +163,7 @@
       "metadata": {
         "id": "HhZFSTGpbzlP"
       },
-      "execution_count": 6,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -198,7 +198,7 @@
       "metadata": {
         "id": "MpnSqpCSayGx"
       },
-      "execution_count": 7,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -305,7 +305,7 @@
       "metadata": {
         "id": "CP1-uInDbIbS"
       },
-      "execution_count": 8,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -325,16 +325,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z9v0SRMpgOSg",
-        "outputId": "2ac5f602-6b29-4beb-d4aa-6015679e6d65"
+        "outputId": "e887b877-486c-4fa3-c2e6-992e12fb67a7"
       },
-      "execution_count": 9,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[ 0.0870,  0.0393,  0.1374,  ..., -0.1829, -0.0624,  0.0423],\n",
-            "        [-0.2144, -0.0691, -0.0627,  ..., -0.2680,  0.0382, -0.2446]],\n",
+            "tensor([[-0.1948, -0.2776, -0.0036,  ...,  0.2708, -0.0901, -0.2086],\n",
+            "        [ 0.0468, -0.1138, -0.1994,  ...,  0.2127,  0.1022, -0.0302]],\n",
             "       grad_fn=<AddmmBackward0>)\n",
             "torch.Size([2, 1470])\n"
           ]
@@ -368,7 +368,7 @@
       "metadata": {
         "id": "7osfQ9J5o9qo"
       },
-      "execution_count": 10,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -430,7 +430,7 @@
       "metadata": {
         "id": "LP3JmNIZFlBw"
       },
-      "execution_count": 11,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -554,7 +554,156 @@
       "metadata": {
         "id": "xLTJbUI2Fh3f"
       },
-      "execution_count": 45,
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Download dataset"
+      ],
+      "metadata": {
+        "id": "YbSYgpQFp9zo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/drive/')\n",
+        "\n",
+        "# !cp \"/content/drive/MyDrive/kaggle/kaggle.json\" \"/content/\"\n",
+        "\n",
+        "# ! pip install kaggle\n",
+        "# ! mkdir ~/.kaggle\n",
+        "# ! cp kaggle.json ~/.kaggle/\n",
+        "# ! chmod 600 ~/.kaggle/kaggle.json\n",
+        "# ! kaggle datasets download -d aladdinpersson/pascalvoc-yolo\n",
+        "\n",
+        "# import zipfile\n",
+        "\n",
+        "# zip_ref = zipfile.ZipFile(\"/content/pascalvoc-yolo.zip\")\n",
+        "# zip_ref.extractall(\"/content/data\")\n",
+        "# zip_ref.close()"
+      ],
+      "metadata": {
+        "id": "YLSZg5e9rFHA"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Dataset"
+      ],
+      "metadata": {
+        "id": "ItM4AMk1uERJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import pandas as pd\n",
+        "from PIL import Image"
+      ],
+      "metadata": {
+        "id": "rOnProFeuUhY"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class VOCDataset(torch.utils.data.Dataset):\n",
+        "    # csv_file : contain the label files name and corresponding image files names\n",
+        "    def __init__(\n",
+        "        self, csv_file, img_dir, label_dir, S=7, B=2, C=20, transform=None,\n",
+        "    ):\n",
+        "        self.annotations = pd.read_csv(csv_file)\n",
+        "        self.img_dir = img_dir\n",
+        "        self.label_dir = label_dir\n",
+        "        self.transform = transform\n",
+        "        self.S = S\n",
+        "        self.B = B\n",
+        "        self.C = C\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        return len(self.annotations)\n",
+        "\n",
+        "    def __getitem__(self, index):\n",
+        "        label_path = os.path.join(self.label_dir, self.annotations.iloc[index, 1])\n",
+        "        boxes = []\n",
+        "        with open(label_path) as f:\n",
+        "            for label in f.readlines():\n",
+        "                class_label, x, y, width, height = [\n",
+        "                    float(x) if float(x) != int(float(x)) else int(x)\n",
+        "                    for x in label.replace(\"\\n\", \"\").split()\n",
+        "                ]\n",
+        "\n",
+        "                boxes.append([class_label, x, y, width, height])\n",
+        "\n",
+        "        img_path = os.path.join(self.img_dir, self.annotations.iloc[index, 0])\n",
+        "        image = Image.open(img_path)\n",
+        "        boxes = torch.tensor(boxes)\n",
+        "\n",
+        "        if self.transform:\n",
+        "            # image = self.transform(image)\n",
+        "            image, boxes = self.transform(image, boxes)\n",
+        "\n",
+        "        # Convert To Cells (only use S x S x (C+5))\n",
+        "        label_matrix = torch.zeros((self.S, self.S, self.C + 5 * self.B))\n",
+        "        for box in boxes:\n",
+        "            class_label, x, y, width, height = box.tolist()\n",
+        "            class_label = int(class_label)\n",
+        "\n",
+        "            # i,j represents the cell row and cell column\n",
+        "            i, j = int(self.S * y), int(self.S * x)\n",
+        "            # x_cell, y_cell represents x, y coordinate relative to the cell \n",
+        "            x_cell, y_cell = self.S * x - j, self.S * y - i\n",
+        "\n",
+        "            \"\"\"\n",
+        "            Calculating the width and height of cell of bounding box,\n",
+        "            relative to the cell is done by the following, with\n",
+        "            width as the example:\n",
+        "            \n",
+        "            width_pixels = (width*self.image_width)\n",
+        "            cell_pixels = (self.image_width)\n",
+        "            \n",
+        "            Then to find the width relative to the cell is simply:\n",
+        "            width_pixels/cell_pixels, simplification leads to the\n",
+        "            formulas below.\n",
+        "            \"\"\"\n",
+        "            width_cell, height_cell = (\n",
+        "                width * self.S,\n",
+        "                height * self.S,\n",
+        "            )\n",
+        "\n",
+        "            # If no object already found for specific cell i,j\n",
+        "            # Note: This means we restrict to ONE object\n",
+        "            # per cell!\n",
+        "            if label_matrix[i, j, 20] == 0:\n",
+        "                # Set that there exists an object\n",
+        "                label_matrix[i, j, 20] = 1\n",
+        "\n",
+        "                # Box coordinates\n",
+        "                box_coordinates = torch.tensor(\n",
+        "                    [x_cell, y_cell, width_cell, height_cell]\n",
+        "                )\n",
+        "\n",
+        "                label_matrix[i, j, 21:25] = box_coordinates\n",
+        "\n",
+        "                # Set one hot encoding for class_label\n",
+        "                label_matrix[i, j, class_label] = 1\n",
+        "\n",
+        "        return image, label_matrix"
+      ],
+      "metadata": {
+        "id": "pmiQbtOOuGzZ"
+      },
+      "execution_count": 35,
       "outputs": []
     }
   ]
